# numlockw

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: install.yaml
src/numlockw/: __main__.py
