[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numlockw"
version = "0.0.1"
authors = [
  { name="xz-dev", email="xiangzhedev@gmail.com" },
]
description = "Control the state of NumLock"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/xz-dev/numlockw"
Issues = "https://github.com/xz-dev/numlockw/issues"

[project.scripts]
numlockw = "numlockw.__main__:main"
